--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,8 @@
     -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+
 
 
     <application
@@ -25,13 +27,8 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_maps_key" />
-
-        <activity
-            android:name=".activity_create_breakfastRecipe"
-            android:label="@string/title_activity_create_breakfast_recipe"
-            android:theme="@style/NoActionBar"></activity>
-
+            android:value="AIzaSyCcj-QizM0p6QyD3OzIhUGnUtORtB8xjtU" />
+        
 
         <activity
             android:name=".MainActivity"
